@@ -1,6 +1,7 @@
 0.32_dev
 -revise surface alpha.
 -update transform to preserve surface alpha.
+-add vector copy method.
 
 0.32    2022-04-17
 -add key set_repeat method.
